--- a/lumis-opd/client/package.json
+++ b/lumis-opd/client/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,css}\"",
-    "seed:xlsx": "tsx scripts/seed-from-xlsx.ts"
+    "seed:xlsx": "tsx scripts/seed-from-xlsx.ts",
+    "clear:medicines": "tsx scripts/clear-medicines.ts",
+    "seed:formulary": "tsx scripts/seed-formulary.ts"
   },
   "keywords": [
     "hospital",
